--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <title>js ecom website</title>
   <script type="module" crossorigin src="/assets/showToast-BYVryQkk.js"></script>
   <script type="module" crossorigin src="/assets/main-XboL0YR9.js"></script>
-  <link rel="stylesheet" crossorigin href="/assets/showToast-DVgJNvX1.css">
+  <link rel="stylesheet" crossorigin href="./assets/showToast-DVgJNvX1.css">
 </head>
 
 <body>
