--- a/about.html
+++ b/about.html
@@ -8,7 +8,13 @@
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!--? ## Step 1: Don't Forget To LIKE SHARE & SUBSCRIBE TO THAPA TECHNCIAL YOUTUBE CHANNEL 👉 https://www.youtube.com/thapatechnical -->
-
+
+<style>
+  body {
+    background-color: pink;
+  }
+</style>
+
     <title>js ecom website</title>
   <script type="module" crossorigin src="/assets/showToast-BYVryQkk.js"></script>
   <script type="module" crossorigin src="/assets/main-XboL0YR9.js"></script>
@@ -313,7 +319,8 @@
         </div>
     </footer>
 
-    <!-- ========== End footer Section ========== -->
+    <!-- ========== End footer Section ========== -->
+
 </body>
 
 </html>
